# raiden

./: .clang-tidy  .cmake-format.yaml  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
examples/example_game/: CMakeLists.txt  engine.toml  plugin_exports.def
examples/example_game/config/: actions.toml
examples/example_game/src/: Game.cpp  Game.hpp
games/ExampleGame/: CMakeLists.txt  default.scene.json  engine.toml
games/ExampleGame/src/: Game.cpp  Game.hpp
games/ExampleGame/textures/: checkerboard.ktx2  skybox.ktx2
src/Engine/: CMakeLists.txt
src/Engine/include/Raiden/: Application.hpp  EngineConfig.hpp  Logger.hpp
src/Engine/include/Raiden/Assets/: AssetManager.hpp  IAssetManager.hpp
src/Engine/include/Raiden/Audio/: IAudioDevice.hpp  OpenALDevice.hpp
src/Engine/include/Raiden/Core/: ConVar.hpp  ConfigLoader.hpp  IFile.hpp  IVirtualFileSystem.hpp  PluginABI.hpp
src/Engine/include/Raiden/ECS/: Archetype.hpp  Camera.hpp  Collider.hpp  Entity.hpp  Light.hpp  MeshRenderer.hpp  Name.hpp  Rigidbody.hpp  System.hpp  Transform.hpp  World.hpp
src/Engine/include/Raiden/Editor/: GizmoMode.hpp  GizmoRenderer.hpp
src/Engine/include/Raiden/Engine/: GamePluginLoader.hpp  IGamePlugin.hpp  IImGuiBackend.hpp  ImGuiOverlay.hpp  VulkanImGuiBackend.hpp
src/Engine/include/Raiden/Input/: ActionMap.hpp
src/Engine/include/Raiden/Jobs/: JobSystem.hpp
src/Engine/include/Raiden/Physics/: ContactEvent.hpp  IPhysicsSystem.hpp  PhysicsConfig.hpp  PhysicsSyncSystem.hpp
src/Engine/include/Raiden/Platform/: IPlatform.hpp  InputState.hpp
src/Engine/include/Raiden/Renderer/: IBuffer.hpp  ICommandBuffer.hpp  IMaterial.hpp  IPipeline.hpp  IRenderDevice.hpp  ISampler.hpp  ITexture.hpp  Mesh.hpp  Model.hpp  RenderTypes.hpp
src/Engine/include/Raiden/Scene/: SceneSerializer.hpp
src/Engine/src/Assets/: AssetManager.cpp  DecodedTextureData.hpp  GltfLoader.cpp  GltfLoader.hpp  KtxLoader.cpp  KtxLoader.hpp  StbImageLoader.cpp  StbImageLoader.hpp
src/Engine/src/Audio/: OpenALDevice.cpp
src/Engine/src/Core/: ConVar.cpp  ConfigLoader.cpp  Logger.cpp  OSFileSystem.cpp  OSFileSystem.hpp  PluginABI.cpp
src/Engine/src/ECS/: World.cpp
src/Engine/src/Editor/: GizmoRenderer.cpp
src/Engine/src/Engine/: Application.cpp  GamePluginLoader.cpp  ImGuiOverlay.cpp  VulkanImGuiBackend.cpp
src/Engine/src/Engine/ImGuiFonts/: InterFont.hpp
src/Engine/src/Input/: ActionMap.cpp
src/Engine/src/Jobs/: JobSystem.cpp
src/Engine/src/Physics/: JoltContactListener.cpp  JoltContactListener.hpp  JoltPhysicsSystem.cpp  JoltPhysicsSystem.hpp  PhysicsSyncSystem.cpp  RaidenJobSystem.cpp  RaidenJobSystem.hpp
src/Engine/src/Platform/Qt/: QtPlatform.cpp
src/Engine/src/Platform/SDL3/: SDL3Platform.cpp
src/Engine/src/Renderer/Vulkan/: VulkanAllocator.cpp  VulkanAllocator.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanBufferImpl.hpp  VulkanCommandBuffer.cpp  VulkanCommandBuffer.hpp  VulkanDescriptorPool.cpp  VulkanDescriptorPool.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFrameContext.cpp  VulkanFrameContext.hpp  (+18 more)
src/Engine/src/Scene/: SceneSerializer.cpp
src/EngineCore/: CMakeLists.txt
src/EngineCore/include/RaidenEngineCore/: Application.hpp  EngineConfig.hpp  Logger.hpp
src/EngineCore/src/: Application.cpp  Logger.cpp
src/EngineCore/src/Assets/: AssetManager.cpp  DecodedTextureData.hpp  GltfLoader.cpp  GltfLoader.hpp  KtxLoader.cpp  KtxLoader.hpp  StbImageLoader.cpp  StbImageLoader.hpp
src/EngineCore/src/Audio/: OpenALDevice.cpp
src/EngineCore/src/Core/: OSFileSystem.cpp  OSFileSystem.hpp
src/EngineCore/src/ECS/: World.cpp
src/EngineCore/src/Engine/: GamePluginLoader.cpp  ImGuiOverlay.cpp  VulkanImGuiBackend.cpp
src/EngineCore/src/Input/: ActionMap.cpp
src/EngineCore/src/Jobs/: JobSystem.cpp
src/EngineRuntime/: CMakeLists.txt
src/EngineRuntime/src/: main.cpp
src/RaidenEditor/: CMakeLists.txt  editor_resources.qrc
src/RaidenEditor/editor/: CMakeLists.txt
src/RaidenEditor/editor/theme/: styles.qss
src/RaidenEditor/include/RaidenEditor/: EditorMainWindow.hpp  EditorPlugin.hpp  GizmoMode.hpp
src/RaidenEditor/src/: EditorMainWindow.cpp  EditorPlugin.cpp  EditorRuntime.cpp
src/RaidenEditor/src/Core/: EditorContext.cpp  ProjectDiscovery.cpp
src/RaidenEditor/src/CustomWidgets/: CustomTitleBar.cpp
src/RaidenEditor/src/Helpers/: FramelessResizeHelper.cpp
src/RaidenEditor/src/Icons/: FluentIcons.cpp
src/RaidenEditor/src/Panels/: AssetBrowser.cpp  InspectorPanel.cpp  SceneTreePanel.cpp
src/RaidenEditor/src/Widgets/: NewProjectDialog.cpp  ProjectLauncherDialog.cpp
src/RaidenUI/: CMakeLists.txt
src/RaidenUI/CSS/: Parser.cpp  Parser.hpp  Properties.cpp  Properties.hpp  Selector.cpp  Selector.hpp
src/RaidenUI/Core/: Signal.cpp  Signal.hpp
src/RaidenUI/DOM/: Element.cpp  Element.hpp  Events.cpp  Events.hpp  Reconciler.cpp  Reconciler.hpp  XmlParser.cpp  XmlParser.hpp
src/RaidenUI/Layout/: Flexbox.cpp  Flexbox.hpp  Solver.cpp  Solver.hpp
src/RaidenUI/Render/: FontAtlas.cpp  FontAtlas.hpp  FontFace.cpp  FontFace.hpp  QuadBatcher.cpp  QuadBatcher.hpp  TextureCache.cpp  TextureCache.hpp
src/Runtime/: CMakeLists.txt
src/Runtime/src/: main.cpp
src/Shaders/: CMakeLists.txt  brdf_lut.slang  gizmo.slang  irradiance_convolution.slang  pbr.slang  prefilter_envmap.slang  shadow.slang  skybox.slang  tonemap.slang  triangle.slang  ui.slang
src/Shaders/include/: common.slangh
tests/: CMakeLists.txt
tests/assets/: CMakeLists.txt  NullRenderDevice.hpp  asset_manager_test.cpp
tests/benchmarks/: CMakeLists.txt  ecs_mutation_benchmark.cpp  ecs_system_benchmark.cpp  ecs_view_benchmark.cpp  transform_hierarchy_benchmark.cpp
tests/config/: CMakeLists.txt  config_loader_test.cpp
tests/core/: CMakeLists.txt  os_filesystem_test.cpp
tests/ecs/: CMakeLists.txt  destroy_test.cpp  transform_test.cpp  world_test.cpp
tests/input/: CMakeLists.txt  action_map_test.cpp
tests/jobs/: CMakeLists.txt  job_system_test.cpp
tests/scene/: CMakeLists.txt  serializer_test.cpp
tests/vfs/: CMakeLists.txt  filesystem_test.cpp
(+107 files in other folders)
