[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "raiden-tools"
version = "0.1.0"
description = "raiden engine developer tools"
requires-python = ">=3.10"

[project.scripts]
raiden = "RaidenTools.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
